fix: Remove overflow-x of body
When expand multiple articles in about section scrollbar in bottom
appears

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -12,6 +12,7 @@ body{
 	
 	display: flex;
 	flex-direction: row;
+	overflow-x: hidden;
 
 	background-image: url("../images/background-main-resized.jpg");
 	background-repeat: no-repeat;
